[gd_scene load_steps=10 format=3 uid="uid://gfj0vsvmo4ik"]

[ext_resource type="Script" path="res://game_objects/bullet/bullet_proj_ray.gd" id="1_o56ga"]
[ext_resource type="Shader" path="res://game_objects/bullet/tracer_particle.gdshader" id="2_fnr3d"]
[ext_resource type="Shader" path="res://game_objects/bullet/tracer.gdshader" id="3_5pkrh"]
[ext_resource type="Script" path="res://components/damage_component/damage_component.gd" id="4_d5o0h"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_sr6c2"]
shader = ExtResource("2_fnr3d")
shader_parameter/height = 0.01

[sub_resource type="Gradient" id="Gradient_vh87s"]
interpolation_mode = 2
colors = PackedColorArray(0.11, 3, 0.13, 1, 0.109804, 3, 0.129412, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_10bv2"]
gradient = SubResource("Gradient_vh87s")
use_hdr = true
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(1, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_bhr6y"]
render_priority = 0
shader = ExtResource("3_5pkrh")
shader_parameter/tex = SubResource("GradientTexture2D_10bv2")

[sub_resource type="QuadMesh" id="QuadMesh_a8vkh"]
material = SubResource("ShaderMaterial_bhr6y")

[node name="IterativeRaycastBullet" type="Node3D"]
script = ExtResource("1_o56ga")
initial_speed = 950.0
initial_damage = 15.0
pen_rating = 9
k = 0.00174
moa = null

[node name="Tracer" type="GPUParticles3D" parent="."]
amount = 2
lifetime = 2.0
speed_scale = 30.0
process_material = SubResource("ShaderMaterial_sr6c2")
draw_pass_1 = SubResource("QuadMesh_a8vkh")

[node name="DespawnTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="DamageComponent" type="Node3D" parent="."]
unique_name_in_owner = true
script = ExtResource("4_d5o0h")
damage = 15.0
armor_penetration_rating = 9

[connection signal="timeout" from="DespawnTimer" to="." method="_on_despawn_timer_timeout"]
